--- a/.eslintrc
+++ b/.eslintrc
@@ -7,11 +7,12 @@
   },
   "rules": {
     "max-len": ["warn", 120],
-    "indent": ["warn", 4],
-    "react/jsx-indent": ["warn", 4],
-    "semi": [2, "never"],
-    "no-underscore-dangle": 0,
-    "no-console": 0
+    "indent": ["warn", 2, {"SwitchCase": 1}],
+    "react/jsx-indent": ["warn", 2],
+    "no-console": 0,
+    "comma-dangle": 0,
+    "react/prop-types": 0,
+    "arrow-parens": 0
   },
   "globals": {
     "localStorage": true 
